# Archon.AI

./: .gitignore  README.md  main.py  pyproject.toml
configs/: ingestion_config.json  logging_config.json
data/: repositories.json
data/processed/: ast_dataset.json  embedding_dataset.json  indexed_dataset.json  repository_dataset.json
src/ast_parser/: generic_parser.py  javascript_parser.py  models.py  parser.py  python_parser.py  registry.py  rust_parser.py  typescript_parser.py
src/embeddings/: chroma_store.py  embedder.py  indexer.py  manual_retriever.py
src/enrichment/: semantic_builder.py
src/ingestion/: clone_repo.py  file_filter.py
src/llm/: prompt_builder.py  qwen_client.py
src/parsing/: language_detector.py  parser.py
src/repository/: repository_manager.py
src/retrieval/: context_builder.py  retriever.py
src/utils/: config.py  logger.py
tests/: test_ast_parsers.py  test_context_builder.py  test_indexing_filters.py  test_prompt_builder.py  test_qwen_client.py  test_semantic_enrichment.py  test_universal_ingestion.py
