[project]
name = "archon-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "gitpython>=3.1.50",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-text-splitters>=1.1.2",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
